# qa-radar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ja.md  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  source_proposal.md
.github/workflows/: ci.yml  crawl.yml  pages.yml  pypi.yml
config/: blocked.yaml  sources.yaml  tag_rules.yaml
docs/: sources.md  style.css
scripts/: build_pages.py  notify_discord.py  publish_release.py  retag_all.py  run_crawl.py
src/qa_radar/: __init__.py  __main__.py  db.py  server.py  sources.py  tools.py
src/qa_radar/crawler/: __init__.py  dedup.py  fetch.py  normalize.py  orchestrator.py  parse.py  store.py
src/qa_radar/publisher/: __init__.py  discord.py  notification_state.py  pages.py  queries.py  rss.py
src/qa_radar/summarizer/: __init__.py  anthropic_client.py
src/qa_radar/tagger/: __init__.py  apply.py  engine.py  rules.py
tests/: conftest.py  test_smoke.py
tests/integration/: test_crawl_e2e.py
tests/unit/: test_db.py  test_dedup.py  test_fetch.py  test_normalize.py  test_notification_state.py  test_orchestrator.py  test_parse.py  test_publish_release.py  test_publisher_discord.py  test_publisher_pages.py  test_publisher_queries.py  test_publisher_rss.py  test_server.py  test_sources.py  test_store.py  test_summarizer.py  test_tagger_apply.py  test_tagger_engine.py  test_tagger_rules.py  test_tools.py
